[gd_scene load_steps=16 format=2]

[ext_resource path="res://GUI/CityMenu.gd" type="Script" id=1]
[ext_resource path="res://SharedResources/ResourceIcons/Tea.png" type="Texture" id=2]
[ext_resource path="res://SharedResources/ResourceIcons/Marble.png" type="Texture" id=3]
[ext_resource path="res://SharedResources/ResourceIcons/Grapes.png" type="Texture" id=4]
[ext_resource path="res://SharedResources/ResourceIcons/Silver.png" type="Texture" id=5]
[ext_resource path="res://SharedResources/ResourceIcons/Incense.png" type="Texture" id=6]
[ext_resource path="res://SharedResources/ResourceIcons/Gold.png" type="Texture" id=7]
[ext_resource path="res://SharedResources/ResourceIcons/Coffee.png" type="Texture" id=8]
[ext_resource path="res://SharedResources/ResourceIcons/Fish.png" type="Texture" id=9]
[ext_resource path="res://SharedResources/ResourceIcons/Wheat.png" type="Texture" id=10]
[ext_resource path="res://SharedResources/ResourceIcons/Salt.png" type="Texture" id=11]
[ext_resource path="res://SharedResources/ResourceIcons/Diamond.png" type="Texture" id=12]
[ext_resource path="res://GUI/X.png" type="Texture" id=13]
[ext_resource path="res://SharedResources/ResourceIcons/Dyes.png" type="Texture" id=14]
[ext_resource path="res://SharedResources/ResourceIcons/Lumber.png" type="Texture" id=15]

[node name="CityMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -298.0
margin_right = -411.0
margin_bottom = 277.0
rect_scale = Vector2( 0.95, 0.9 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 7.36842
margin_right = 163.0
margin_bottom = 167.368
rect_min_size = Vector2( 160, 160 )
rect_scale = Vector2( 0.894737, 3.6 )
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 17.8947
margin_top = 8.88889
margin_right = 135.895
margin_bottom = 22.8889
rect_scale = Vector2( 0.945432, 1.24159 )
text = "Greenglade"
align = 1

[node name="Title2" type="Label" parent="."]
margin_left = 10.2105
margin_top = 538.362
margin_right = 128.211
margin_bottom = 552.362
rect_scale = Vector2( 0.7, 0.7 )
text = "Sell Inventory Slot"
align = 1

[node name="Sell" type="Label" parent="."]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 38.9474
margin_top = 32.2222
margin_right = 108.947
margin_bottom = 46.2222
rect_scale = Vector2( 0.767643, 0.939517 )
text = "Sell Price"
align = 1
valign = 1

[node name="Buy" type="Label" parent="."]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 91.579
margin_top = 32.2222
margin_right = 161.579
margin_bottom = 46.2222
rect_scale = Vector2( 0.767643, 0.939517 )
text = "Buy Price"
align = 1
valign = 1

[node name="MoveBtn" type="Button" parent="."]
visible = false
margin_left = 461.96
margin_top = 465.6
margin_right = 547.96
margin_bottom = 485.6
text = "MOVE HERE"

[node name="BuyBtn" type="Button" parent="."]
visible = false
margin_left = 447.96
margin_top = 465.6
margin_right = 560.96
margin_bottom = 485.6
text = "BUY MERCHANT"

[node name="CancelBtn" type="Button" parent="."]
visible = false
margin_left = 473.96
margin_top = 465.6
margin_right = 534.96
margin_bottom = 485.6
text = "CANCEL"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.31579
margin_top = 43.3333
margin_right = 111.316
margin_bottom = 741.333
rect_scale = Vector2( 0.7, 0.7 )

[node name="TextureRect99" type="TextureRect" parent="VBoxContainer"]
margin_right = 105.0
margin_bottom = 50.0
texture = ExtResource( 5 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect99"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18045, 1.31746 )
text = "Silver"
align = 1
valign = 1

[node name="SilverValue" type="Label" parent="VBoxContainer/TextureRect99"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18045, 1.3859 )
text = "M 7"
align = 1
valign = 1

[node name="SilverValue2" type="Label" parent="VBoxContainer/TextureRect99"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18045, 1.3859 )
text = "M 7"
align = 1
valign = 1

[node name="Inv4" type="Button" parent="VBoxContainer/TextureRect99"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 105.0
margin_bottom = 104.0
texture = ExtResource( 7 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect2"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Gold"
align = 1
valign = 1

[node name="GoldValue" type="Label" parent="VBoxContainer/TextureRect2"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="GoldValue2" type="Label" parent="VBoxContainer/TextureRect2"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv5" type="Button" parent="VBoxContainer/TextureRect2"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 105.0
margin_bottom = 158.0
texture = ExtResource( 11 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect3"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Salt"
align = 1
valign = 1

[node name="SaltValue" type="Label" parent="VBoxContainer/TextureRect3"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="SaltValue2" type="Label" parent="VBoxContainer/TextureRect3"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv6" type="Button" parent="VBoxContainer/TextureRect3"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 105.0
margin_bottom = 212.0
texture = ExtResource( 4 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect4"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Grapes"
align = 1
valign = 1

[node name="GrapesValue" type="Label" parent="VBoxContainer/TextureRect4"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="GrapesValue2" type="Label" parent="VBoxContainer/TextureRect4"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv7" type="Button" parent="VBoxContainer/TextureRect4"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 105.0
margin_bottom = 266.0
texture = ExtResource( 10 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect5"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Wheat"
align = 1
valign = 1

[node name="WheatValue" type="Label" parent="VBoxContainer/TextureRect5"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="WheatValue2" type="Label" parent="VBoxContainer/TextureRect5"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv8" type="Button" parent="VBoxContainer/TextureRect5"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect6" type="TextureRect" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 105.0
margin_bottom = 320.0
texture = ExtResource( 2 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect6"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Tea"
align = 1
valign = 1

[node name="TeaValue" type="Label" parent="VBoxContainer/TextureRect6"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="TeaValue2" type="Label" parent="VBoxContainer/TextureRect6"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv9" type="Button" parent="VBoxContainer/TextureRect6"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect7" type="TextureRect" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 105.0
margin_bottom = 374.0
texture = ExtResource( 3 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect7"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Marble"
align = 1
valign = 1

[node name="MarbleValue" type="Label" parent="VBoxContainer/TextureRect7"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="MarbleValue2" type="Label" parent="VBoxContainer/TextureRect7"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv10" type="Button" parent="VBoxContainer/TextureRect7"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect8" type="TextureRect" parent="VBoxContainer"]
margin_top = 378.0
margin_right = 105.0
margin_bottom = 428.0
texture = ExtResource( 6 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect8"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Incense"
align = 1
valign = 1

[node name="IncenseValue" type="Label" parent="VBoxContainer/TextureRect8"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="IncenseValue2" type="Label" parent="VBoxContainer/TextureRect8"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv11" type="Button" parent="VBoxContainer/TextureRect8"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect9" type="TextureRect" parent="VBoxContainer"]
margin_top = 432.0
margin_right = 105.0
margin_bottom = 482.0
texture = ExtResource( 12 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect9"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Diamond"
align = 1
valign = 1

[node name="DiamondValue" type="Label" parent="VBoxContainer/TextureRect9"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="DiamondValue2" type="Label" parent="VBoxContainer/TextureRect9"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv12" type="Button" parent="VBoxContainer/TextureRect9"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect10" type="TextureRect" parent="VBoxContainer"]
margin_top = 486.0
margin_right = 105.0
margin_bottom = 536.0
texture = ExtResource( 9 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect10"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Fish"
align = 1
valign = 1

[node name="FishValue" type="Label" parent="VBoxContainer/TextureRect10"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="FishValue2" type="Label" parent="VBoxContainer/TextureRect10"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv13" type="Button" parent="VBoxContainer/TextureRect10"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect11" type="TextureRect" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 105.0
margin_bottom = 590.0
texture = ExtResource( 15 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect11"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Lumber"
align = 1
valign = 1

[node name="LumberValue" type="Label" parent="VBoxContainer/TextureRect11"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="LumberValue2" type="Label" parent="VBoxContainer/TextureRect11"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv14" type="Button" parent="VBoxContainer/TextureRect11"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect12" type="TextureRect" parent="VBoxContainer"]
margin_top = 594.0
margin_right = 105.0
margin_bottom = 644.0
texture = ExtResource( 14 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect12"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Dyes"
align = 1
valign = 1

[node name="DyesValue" type="Label" parent="VBoxContainer/TextureRect12"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="DyesValue2" type="Label" parent="VBoxContainer/TextureRect12"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv15" type="Button" parent="VBoxContainer/TextureRect12"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="TextureRect13" type="TextureRect" parent="VBoxContainer"]
margin_top = 648.0
margin_right = 105.0
margin_bottom = 698.0
texture = ExtResource( 8 )

[node name="Cost" type="Label" parent="VBoxContainer/TextureRect13"]
margin_left = 50.0
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 1.18, 1.317 )
text = "Coffee"
align = 1
valign = 1

[node name="CoffeeValue" type="Label" parent="VBoxContainer/TextureRect13"]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 50.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 33.0
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="CoffeeValue2" type="Label" parent="VBoxContainer/TextureRect13"]
modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 126.316
margin_top = 17.4604
margin_right = 156.316
margin_bottom = 31.4604
rect_scale = Vector2( 1.18, 1.386 )
text = "M 7"
align = 1
valign = 1

[node name="Inv16" type="Button" parent="VBoxContainer/TextureRect13"]
self_modulate = Color( 0.988235, 1, 0.752941, 1 )
margin_left = 172.932
margin_top = 15.0
margin_right = 192.932
margin_bottom = 20.0
text = "+"

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 74.0001
margin_top = -1.05263
margin_right = 186.0
margin_bottom = 104.947
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 13 )

[node name="Inv1" type="Button" parent="."]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 9.0
margin_top = 551.579
margin_right = 34.0
margin_bottom = 576.579
text = "1"

[node name="Inv2" type="Button" parent="."]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 39.0
margin_top = 551.579
margin_right = 64.0
margin_bottom = 576.579
text = "2"

[node name="Inv3" type="Button" parent="."]
modulate = Color( 0.431373, 0.721569, 0.658824, 1 )
margin_left = 69.0
margin_top = 551.579
margin_right = 94.0
margin_bottom = 576.579
text = "3"

[connection signal="pressed" from="MoveBtn" to="." method="_on_MoveBtn_pressed"]
[connection signal="pressed" from="BuyBtn" to="." method="_on_BuyBtn_pressed"]
[connection signal="pressed" from="CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect99/Inv4" to="." method="_on_Inv4_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect2/Inv5" to="." method="_on_Inv5_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect3/Inv6" to="." method="_on_Inv6_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect4/Inv7" to="." method="_on_Inv7_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect5/Inv8" to="." method="_on_Inv8_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect6/Inv9" to="." method="_on_Inv9_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect7/Inv10" to="." method="_on_Inv10_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect8/Inv11" to="." method="_on_Inv11_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect9/Inv12" to="." method="_on_Inv12_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect10/Inv13" to="." method="_on_Inv13_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect11/Inv14" to="." method="_on_Inv14_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect12/Inv15" to="." method="_on_Inv15_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect13/Inv16" to="." method="_on_Inv16_pressed"]
[connection signal="button_down" from="Inv1" to="." method="_on_Inv1_button_down"]
[connection signal="button_down" from="Inv2" to="." method="_on_Inv2_button_down"]
[connection signal="button_down" from="Inv3" to="." method="_on_Inv3_button_down"]
